fixing layout issues

--- a/src/styles/spectate.scss
+++ b/src/styles/spectate.scss
@@ -120,7 +120,7 @@ b {
     background-color: rgba(0, 0, 0, 0.6);
     max-width: 700px;
     color: #fff;
-    transform: translateY(-150%); // TODO: do better;
+    transform: translateY(-175%); // TODO: do better;
     align-items: center;
 
     p,
@@ -152,7 +152,7 @@ b {
 @media (max-width: 400px) {
   .cover-hed header {
     margin-top: 50%;
-    transform: translateY(-130%);
+    transform: translateY(-160%);
   }  
 }
 
